--- a/src/app/components/dashboard/dashboard.component.html
+++ b/src/app/components/dashboard/dashboard.component.html
@@ -1,1 +1,24 @@
-<p>dashboard works!</p>
+<div class="container">
+  <div class="dashboard">
+    <h2>Nasdaq</h2>
+
+    <div class="search">
+      <input type="text" placeholder="Type Here to search" />
+    </div>
+
+    <div class="data" *ngFor="let data of data">
+      <p>{{data.value}}</p>
+      <p>{{data.date}}</p>
+    </div>
+  </div>
+
+  <div class="content">
+        <h3>SVSTR</h3>
+      
+            
+</div>
+    <div class="graph">
+
+    </div>
+
+</div>
